# shinny-calendar

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-upload.yml  python-package.yml
shinny_calendar/: __init__.py  core.py
