[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shinny-calendar"
version = "0.1.2"
description = "获取期货交易日的工具，不依赖任何第三方库"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Yanqiong Ma", email = "mayanqiong@shinnytech.com"}
]
keywords = ["trading", "calendar", "finance", "futures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/shinnytech/shinny-calendar"
Repository = "https://github.com/shinnytech/shinny-calendar"

[tool.setuptools]
packages = ["shinny_calendar"]

[tool.setuptools.dynamic]
version = {attr = "shinny_calendar.__version__"}